--- a/css/MyGoogle.css
+++ b/css/MyGoogle.css
@@ -1,3 +1,8 @@
+html, body  {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   box-sizing: border-box;
   font-family: arial,sans-serif;
@@ -76,15 +81,15 @@ a {
   cursor: default;
 }
 
-
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  
   padding-bottom: 56px;
   padding-top: 152px;
-  height: 100%;
+  /*max-height: 100vh;*/
+  min-height: 100%;
 }
 
 .logo {
@@ -131,7 +136,6 @@ a {
 .input-block {
   display: inline-flex;
   justify-content: space-between;
-  /*justify-content: center;*/
   align-items: center;
 
   padding: 0 16px;
@@ -143,7 +147,7 @@ a {
   width: 372px;
   border: none;
 
-  font: 16px;
+  font-size: 16px;
   line-height: 34px;
 }
 
@@ -158,11 +162,10 @@ a {
   border: none;
   outline:none;
 
-/*  background: url(../img/tia.png) no-repeat ;
-*/background: url(data:image/gif;base64,R0lGODlhEwALAKECAAAAABISEv///////yH5BAEKAAIALAAAAAATAAsAAAIdDI6pZ+suQJyy0ocV3bbm33EcCArmiUYk1qxAUAAAOw==) no-repeat ;
-  background-position: center;
-  background-size: 19px 11px;
-  opacity: 0.6;
+background: url(data:image/gif;base64,R0lGODlhEwALAKECAAAAABISEv///////yH5BAEKAAIALAAAAAATAAsAAAIdDI6pZ+suQJyy0ocV3bbm33EcCArmiUYk1qxAUAAAOw==) no-repeat ;
+background-position: center;
+background-size: 19px 11px;
+opacity: 0.6;
 }
 
 .s-form__keyboard:hover {
@@ -172,8 +175,6 @@ a {
 .s-form__voice {
   width: 18px;
   height: 23px;
-  /*padding: 0 8px;*/
-  /*margin-left: 8px;*/
   vertical-align: middle;
 
   border: none;
@@ -250,9 +251,10 @@ a {
   display: flex;
   justify-content: space-between;
 
-    height: 40px;
-    min-width: 980px;
+  height: 40px;
+  min-width: 980px;
   margin-top: -40px;
+  /*margin-top: -52px;*/
 
   background: #f2f2f2;
   border-top: 1px solid #e4e4e4;
